--- a/index.html
+++ b/index.html
@@ -46,10 +46,41 @@
   </style>
 </head>
 <body>
+  <h1>Robotic Arm</h1>
   <video id="video" width="720" height="560" autoplay muted></video>
   <div id="track"></div>
   <div class="button-container">
     <button id="toggleButton">Robot</button>
   </div>
+  <br/>
+  <div  style="border-collapse: collapse; border: 2px solid black; padding: 9px;">
+  <table  >
+    <thead>
+      <tr>
+        <th>Team</th>
+        <th>Members</th>
+      </tr>
+    </thead>
+    <br/>
+    <tbody>
+      <tr>
+        <td>20eumc053</td>
+        <td>Karthikeyan V</td>
+      </tr>
+      <tr>
+        <td>20eumc056</td>
+        <td>Kiran S</td>
+      </tr>
+      <tr>
+        <td>20eumc064</td>
+        <td>Mithun Raghav J</td>
+      </tr>
+      <tr>
+        <td>20eumc069</td>
+        <td>Monishwar M C</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
 </body>
 </html>
